--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "^15.4.6",
     "openai": "^4.20.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@types/next": "^8.0.7",
