--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.0",
     "next": "^15.4.6",
     "openai": "^4.20.0",
+    "pdfkit": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0"
@@ -18,6 +19,7 @@
     "@types/next": "^8.0.7",
     "@types/node": "^18.19.123",
     "@types/node-fetch": "^2.6.13",
+    "@types/pdfkit": "^0.17.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.21",
